--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,15 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".LandmarkList">
+        <activity android:name=".LandmarkListActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".LandmarkDetailsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
